@@ -66,6 +66,9 @@ public class GroovyPageParser implements Tokens {
     public static final String CONSTANT_NAME_DEFAULT_CODEC = "DEFAULT_CODEC";
     public static final String DEFAULT_ENCODING = "UTF-8";
 
+    private static final String MULTILINE_GROOVY_STRING_DOUBLEQUOTES="\"\"\"";
+    private static final String MULTILINE_GROOVY_STRING_SINGLEQUOTES="'''";
+
     private GroovyPageScanner scan;
     private GSPWriter out;
     private String className;
@@ -612,7 +615,7 @@ public class GroovyPageParser implements Tokens {
         // de-dupe constants
         Integer constantNumber = constantsToNumbers.get(text);
         if (constantNumber == null) {
-            constantNumber = new Integer(constantCount++);
+            constantNumber = Integer.valueOf(constantCount++);
             constantsToNumbers.put(text, constantNumber);
             htmlParts.add(text);
         }
@@ -1125,10 +1128,6 @@ public class GroovyPageParser implements Tokens {
         }
         currentlyBufferingWhitespace = false;
     }
-    
-    private static final int PARSING_NORMAL=0;
-    private static final int PARSING_EXPRESSION=1;
-    private static final int PARSING_QUOTEDVALUE=2;
 
     private void populateMapWithAttributes(Map<String, String> attrs, String attrTokens) {
         attrTokens = attrTokens.trim();
@@ -1151,73 +1150,40 @@ public class GroovyPageParser implements Tokens {
                 throw new GrailsTagException("Attribute value must be quoted.", pageName, getCurrentOutputLineNumber());
             }
             char quoteChar = ch;
-            
-            int parenthesisLevel=0;
-            int endPos = startPos;
-            int endQuotepos = -1;
-            char previousChar = 0;
-            int valueCharIndex=0;
-            int parsingState = PARSING_NORMAL;
-            char currentQuoteChar = 0;            
-            while(endPos < attrTokens.length() && endQuotepos==-1) {
-                ch = attrTokens.charAt(endPos++);
-                switch(ch) {
-	                case '{':
-	                	if(previousChar=='$' || parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel++;
-	                		parsingState=PARSING_EXPRESSION;
-	                	}
-	                	break;
-	                case '[':
-	                	if(valueCharIndex==0 || parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel++;
-	                		parsingState=PARSING_EXPRESSION;
-	                	}
-	                	break;
-	                case '}':
-	                case ']': 
-	                	if(parsingState==PARSING_EXPRESSION) {
-	                		parenthesisLevel--;
-	                		if(parenthesisLevel==0) {
-	                			parsingState=PARSING_NORMAL;
-	                		}
-	                	}
-	                	break;
-	                default:
-	                	if(previousChar != '\\') {
-		                	if(parsingState==PARSING_NORMAL && ch==quoteChar && parenthesisLevel == 0) {
-		                		endQuotepos = endPos-1;
-		                	} else if(parsingState==PARSING_EXPRESSION && (ch=='"' || ch=='\'')) {
-	                			currentQuoteChar = ch;
-	                			parsingState = PARSING_QUOTEDVALUE;
-	                		} else if(parsingState==PARSING_QUOTEDVALUE && ch==currentQuoteChar) {
-	                			parsingState = PARSING_EXPRESSION;
-	                		}
-	                	}
-	                	break;
-                }
-                previousChar=ch;
-                valueCharIndex++;
-            }
+
+            GroovyPageExpressionParser expressionParser = new GroovyPageExpressionParser(attrTokens, startPos, quoteChar, (char)0, false);
+            int endQuotepos = expressionParser.parse();
             if (endQuotepos==-1) {
                 throw new GrailsTagException("Attribute value quote wasn't closed.", pageName, getCurrentOutputLineNumber());
             }
 
             String val=attrTokens.substring(startPos, endQuotepos);
 
-            if (val.startsWith("${") && val.endsWith("}") && val.indexOf("${", 2)==-1) {
+            if (val.startsWith("${") && val.endsWith("}") && !expressionParser.isContainsGstrings()) {
                 val = val.substring(2, val.length() - 1);
             }
             else if (!(val.startsWith("[") && val.endsWith("]"))) {
                 if (val.indexOf('"')==-1) {
                     quoteChar = '"';
                 }
-                val = quoteChar + val + quoteChar;
+                String quoteStr;
+                // use multiline groovy string if the value contains newlines
+                if(val.indexOf('\n')!=-1 || val.indexOf('\r')!=-1) {
+                    if(quoteChar=='"') {
+                        quoteStr=MULTILINE_GROOVY_STRING_DOUBLEQUOTES;
+                    } else {
+                        quoteStr=MULTILINE_GROOVY_STRING_SINGLEQUOTES;
+                    }
+                } else {
+                    quoteStr = String.valueOf(quoteChar);
+                }
+                val = quoteStr + val + quoteStr;
             }
             attrs.put("\"" + name + "\"", val);
             startPos = endQuotepos + 1;
         }
     }
+
 
     private void pageImport(String value) {
         // LOG.debug("pageImport(" + value + ')');
